test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_2.snaphost
HTTP/2.0 200 OK
Content-Length: 39
Content-Type: application/json
Date: Mon, 30 Jun 2025 05:09:29 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=5b4d418468a100fa65252ed8ef1740ac6f6194a6; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"172.183.76.138"}